@@ -1,3 +1,12 @@
+Next release
+============
+
+Internal
+--------
+
+- Use ``config.with_package`` in view_config decorator rather than
+  manufacturing a new renderer helper (cleanup).
+
 1.2a2 (2011-08-27)
 ==================
 
